# BinIO

./: CMakeLists.txt  README.md  conanfile.py  conanfile.txt
.github/workflows/: build.yml
BinExporter/: CMakeLists.txt
BinExporter/src/: BinExporter.cpp  BinExporter.h  BinExporter.json
BinLoader/: CMakeLists.txt
BinLoader/src/: BinLoader.cpp  BinLoader.h  BinLoader.json
