cmake_minimum_required(VERSION 3.22)

# -----------------------------------------------------------------------------
# BinIO Plugins
# -----------------------------------------------------------------------------
set(PROJECT "BinIO")
PROJECT(${PROJECT})

# -----------------------------------------------------------------------------
# Plugins
# -----------------------------------------------------------------------------
add_subdirectory(BinLoader)
add_subdirectory(BinExporter)
